# ezDPS

./: Cargo.toml  README.md  spartan-0.3.0.rar
CIFAR/: extract_feature.py  load_data.py  train_dt.py  train_dt_complete.py  train_dwt_pca_dt.py  train_dwt_pca_dt_complete.py  train_dwt_pca_svm.py  train_dwt_pca_svm_complete.py  train_svm.py  train_svm_complete.py
CIFAR/shu_list/: cross_100_shu_0.txt  cross_100_shu_1.txt  cross_100_shu_2.txt  cross_100_shu_3.txt  cross_100_shu_4.txt  cross_16_shu.txt  cross_16_shu_0.txt  cross_16_shu_1.txt  cross_16_shu_2.txt  cross_16_shu_3.txt  cross_16_shu_4.txt  cross_32_shu_0.txt  cross_32_shu_1.txt  cross_32_shu_2.txt  cross_32_shu_3.txt  cross_32_shu_4.txt  cross_64_shu_0.txt  cross_64_shu_1.txt  cross_64_shu_2.txt  cross_64_shu_3.txt  cross_64_shu_4.txt  cross_8_shu_0.txt  (+29 more)
KDD/: load_data.py  train.py  train_appro.py
LFW/: train_dt.py  train_dt_complete.py  train_dwt_pca_dt.py  train_dwt_pca_dt_complete.py  train_dwt_pca_svm.py  train_ezDPS_complete.py  train_svm.py  train_svm_complete.py
UCR/: extract_feature.py  floating2fixed.py  load_data.py  pca_sqrt_transform.py  test.py  train.py  train_appro.py  train_cross.py  train_dt.py  train_dwt_pca_dt.py  train_dwt_pca_svm.py  train_fixpoint.py  train_svm.py  train_svmonly.py
british-bird/: extract_feature.py  load_data.py  main.py  train.py  train_appr.py
src/: bits2int_gadget.rs  commit_test.rs  compute_dwt_output.rs  compute_nl_outputs.rs  dwt.rs  dwt_baseline.rs  extend_dwt.rs  load_data.rs  main.rs  maximum_gadgets.rs  nl.rs  pca.rs  pofsum_gadget.rs  shuffle_gaget.rs  svc.rs  svc_compute_b.rs  svc_compute_d.rs
(+114 files in other folders)
