[package]
name = "spartan_ecg"
version = "0.1.0"
authors = ["haodiwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = "0.3.0"
merlin = "3.0.0"
curve25519-dalek = {version = "3.0.0", features = ["serde", "simd_backend"]}
rand = "0.7.3"
sys-info = "0.9"