[package]
name = "spartan_ecg"
version = "0.1.0"
authors = ["haodiwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan = "0.3.0"
merlin = "3.0.0"
#spartan = {path= "C:\Users\Haodi\.cargo\registry\src\github.com-1ecc6299db9ec823\spartan-0.3.0\src\lib.rs"}
curve25519-dalek = {version = "3.0.0", features = ["serde", "simd_backend"]}
rand = "0.7.3"
sys-info = "0.9"

[dependencies.bincode]
version = "1.2.1"

[patch.crates-io]
spartan = { path = "C:/Users/Haodi/.cargo/registry/src/github.com-1ecc6299db9ec823/spartan-0.3.0" }